2010-03-16  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kleopatra
	*  src/uninst-kleopatra.nsi: Update missing files for uninstall.
	*  src/uninst-oxygen-icons.nsi: Update complete uninstall file 
	   list by pkg-to-nsi.pl script.

2010-03-09  Werner Koch  <wk@g10code.com>

	* patches/gpgme-1.2.0/04-check-agent.patch: New.
	* Makefile.am (EXTRA_DIST): Add patch.

2010-03-05  Werner Koch  <wk@g10code.com>

	Release 2.0.2rc2.

2010-03-04  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* News: Update kleopatra version number.

2010-03-03  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/inst-pinentry.nsi: Set pinentry-qt4 as default.

	* doc/README.en.txt, doc/README.de.txt: Update for 2.0.2-rc2

	* packages/packages.current: Update kdelibs and kleopatra

2010-03-03  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update pinentry.

2010-02-19  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/uninst-oxygen-icons.nsi, src/inst-oxygen-icons.nsi,
 	  packages/packages.current: Update oxygen icons.

	* src/uninst-kleopatra.nsi, src/inst-kleopatra.nsi,
 	  packages/packages.current: Update kdelibs and kleoaptra.

2010-02-11  Marc Mutz <marc@kdab.com>

	* packages/packages.current: Use a different sf.net mirror.

2010-02-10  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kdelibs.nsi: Remove ${prefix}/bin/libgpgme++-qt.dll.

	* patches/gpgex-0.9.5/01-default-no-suffix.patch: Add patch.
	* Makefile.am (EXTRA_DIST): Add this and remove gpgex-0.9.3 patches.

2010-02-03  Werner Koch  <wk@g10code.com>

	Release 2.0.2rc1.

2010-02-03  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current, NEWS: Update kdelibs and kleopatra

2010-02-02  Colin Leroy  <colin@colino.net>

	* patches/claws-mail-3.7.4cvs1/01-bug_2098.patch: Add patch from 
	upstream to fix double-free crash on PGP core. 

2010-02-02  Werner Koch  <wk@g10code.com>
