@@ -67,3 +67,20 @@ EXTRA_DIST = autogen.sh README.SVN ONEWS \
 copy-news:
 	cp NEWS doc/website/NEWS.last
 
+
+copy-release: gpg4win-$(VERSION).tar.bz2 src/gpg4win-$(VERSION).exe
+	@echo Copying $(VERSION) to $(RELEASEHOST) >&2
+	@set -e;\
+	if ssh "$$(echo $(RELEASEHOST)|cut -d: -f -1)" \
+        test -f "$$(echo $(RELEASEHOST)/gpg4win-$(VERSION).exe|cut -d: -f2-)";\
+	then echo "This release has already been copied to the server" >&2 ;\
+	else scp gpg4win-$(VERSION).tar.bz2 \
+	         src/gpg4win-$(VERSION).exe \
+	         src/gpg4win-light-$(VERSION).exe \
+	         src/gpg4win-src-$(VERSION).exe  $(RELEASEHOST)/ ;\
+	     for f in en de ; do \
+	       echo scp src/README.$$f.txt \
+	             $(RELEASEHOST)/README-$(VERSION).$$f.txt; \
+	     done;\
+	fi
+
