@@ -1,3 +1,11 @@
+2010-03-16  Werner Koch  <wk@g10code.com>
+
+	* Makefile.am (copy-release): New.
+
+	* configure.ac (IS_BETA_BUILD): New.
+	(RELEASEHOST): New.
+	* src/gpg4win.mk (README.$(1).txt): Repalce egrep by IS_BETA_BUILD.
+
 2010-03-16  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
 
 	* packages/packages.current: Update kleopatra
